--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.14.191",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "@zzh/components": "workspace:*",
     "@zzh/theme-chalk": "workspace:*",
     "@zzh/utils": "workspace:*",
     "async-validator": "^4.2.5",
+    "element-plus": "^2.2.32",
+    "lodash": "^4.17.21",
     "typescript": "^4.9.4",
-    "vue": "^3.2.45"
+    "unplugin-element-plus": "^0.7.0",
+    "unplugin-vue-components": "^0.24.0",
+    "vue": "^3.2.45",
+    "wangeditor": "^4.7.15"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.48.0",
